--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
       <nav>
         <ul class="nav nav-pills float-right">
           <li class="nav-item">
-            <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link active" href="//diligence.consensys.net/">ConsenSys Diligence <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
 
@@ -33,56 +33,43 @@
       </nav>
       <h3 class="text-muted">LibP2P Address Converter</h3>
     </div>
-
+ 
     <div class="jumbotron">
-      <h1 class="display-1" style="opacity: 0.5;"><a href="https://emojipedia.org/robot-face/"
-          ping="/url?sa=t&amp;source=web&amp;rct=j&amp;url=https://emojipedia.org/robot-face/&amp;ved=2ahUKEwjVqt2-yNDkAhU7wMQBHWkkCzUQFjABegQIABAB"
-          style="color: rgb(102, 0, 153); cursor: pointer; text-decoration-line: underline; font-family: arial, sans-serif; font-size: small; text-align: left; background-color: rgb(255, 255, 255);">
-          <h3 class="LC20lb"
-            style="font-size: 20px; margin-right: 0px; margin-bottom: 0px; margin-left: 0px; padding: 0px; display: inline-flex; max-width: 100%; line-height: 1.3;">
-            <div class="ellip"
-              style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap; display: inline !important;"><br>
-            </div>
-          </h3>
-        </a>LibP2P&nbsp;</h2>
+      <h3 class="display-1" style="opacity: 0.5;">LibP2P&nbsp;</h3>
       <p class="lead">
       <form style="">
-        <div class="form-group"><label>Address</label><input type="text" name="inaddr" class="form-control"
+        <div class="form-group"><label>ENR/Enode/MultiAddress</label><input type="text" name="inaddr" class="form-control"
             placeholder="enr:-LK4QMer7ejH4SWXlSIdM6gOBUD6WH86M95-6ZQ04KOrsAWaDaswyYp9hFmzRpnGVypSlHL_QB2VzNT8ATRckIfnmosBh2F0dG5ldHOIAAAAAAAAAACEZXRoMpD9yjmwAAABIf__________gmlkgnY0gmlwhMCoVkOJc2VjcDI1NmsxoQMRUBv28hoEdjrtt7QIwUtRTeYcKeub2QKgiEsvmiZT1YN0Y3CCMsiDdWRwgi7g" id="inaddr"></div>
         </p>
         <p><button class="btn btn-lg btn-success" href="#" role="button" onclick="">Convert</button></p>
       </form>
       {% if data %}
-      <div class=" ">
-        <div class="col-lg-6">
-          <p>
-          <ul class="list-group" style="">
-            <li class="list-group-item list-group-item-primary">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1"></h5>
-                <small>multiaddr://</small>
-              </div>
-                <p class="mb-1"><small>{{  data["multiaddr"] }}</small></p>
-            </li>
-            <li class="list-group-item list-group-item-warning">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1"></h5>
-                <small>enode://</small>
-              </div>
-                <p class="mb-1"><small>{{  data["enode"] }}</small></p>
+      <div style="text-align: left;">
 
-            </li>
-            <li class="list-group-item list-group-item-info">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1"></h5>
-                <small>enr://</small>
-              </div>
-                <p class="mb-1"><small>{{  data["enr"] }}</small></p>
+        <table class="table">
 
-            </li>
-          </ul>
-          </p>
-        </div>
+          <tr><td nowrap><sup>multiaddr</sup></td><td><code><sup>{{  data["multiaddr"] }}</sup></code></td>
+          <tr><td nowrap><sup>enode</sup></td><td><code><sup>{{  data["enode"] }}</sup></code></td>
+          <tr><td nowrap><sup>ENR</sup></td><td>
+            <p>
+              <code><sup>{{  data["enr"] }}</sup></code>
+            </p>
+            <p>
+                <table class="table table-light">
+                  {% for key in data["enrdata"] %}
+                  <tr><td nowrap><sup>{{ key }}</sup></td><td>|</td><td><code><sup>{{data["enrdata"].get(key)}}</sup></code></td></tr>
+                  {% endfor %}
+                </table>
+            </p>
+            <p>
+              <table class="table table-light">
+                {% for key, value in data["enritems"] %}
+                <tr><td nowrap><sup>{{ key }}</sup></td><td>|</td><td><code><sup>{{value}}</sup></code></td></tr>
+                {% endfor %}
+              </table>
+            </p>
+        </table>
+        
       </div>
     {% endif %}
     </div>
